# swift-zephyr

./: .gitignore  CMakeLists.txt  README.md
Sources/: CMakeLists.txt
Sources/SwiftZephyr/: CMakeLists.txt  Device.swift  Error.swift  LED.swift  README.md  Reset.swift  Shims.swift  Thread.swift  Time.swift
Sources/SwiftZephyr/Analog/: AnalogIn.swift  AnalogOut.swift
Sources/SwiftZephyr/Device/: Device.swift
Sources/SwiftZephyr/GPIO/: DigitalIn.swift  DigitalInOut.swift  DigitalOut.swift  GPIODevice.swift  GPIOFlags.swift
Sources/SwiftZephyrMacros/: .gitignore  CMakeLists.txt  Package.swift  README.md
Sources/SwiftZephyrMacros/DTGenerator/: DTGenerator.swift  DeviceTree.swift
Sources/SwiftZephyrMacros/Macros/: DeviceMacro.swift  DeviceTree.swift  ErrorMacro.swift  SwiftZephyrMacros.swift
Sources/SwiftZephyrMacros/cmake/: MacroConfig.swift.in  MacroSetup.cmake
Sources/SwiftZephyrShims/: CMakeLists.txt  README.md
Sources/SwiftZephyrShims/include/: SwiftZephyrShims.apinotes  SwiftZephyrShims.h  module.modulemap
cmake/: Stubs.c  SwiftSetup.cmake
cmake/FakeApp/: CMakeLists.txt  README.md  prj.conf
zephyr/: CMakeLists.txt  module.yml
